@@ -1,0 +1,34 @@
+/*
+ * Copyright 2018 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *
+ */
+
+package de.codecentric.spring.boot.chaos.monkey.configuration;
+
+import org.springframework.context.annotation.Condition;
+import org.springframework.context.annotation.ConditionContext;
+import org.springframework.core.env.Profiles;
+import org.springframework.core.type.AnnotatedTypeMetadata;
+
+/** @author Daekwon Kang */
+public class ChaosMonkeyCondition implements Condition {
+  @Override
+  public boolean matches(
+      ConditionContext conditionContext, AnnotatedTypeMetadata annotatedTypeMetadata) {
+
+    return conditionContext.getEnvironment().acceptsProfiles(Profiles.of("chaos-monkey"))
+        || Boolean.parseBoolean(System.getProperty("LOAD_CHAOS_MONKEY"));
+  }
+}
